--- a/src/page.css
+++ b/src/page.css
@@ -15,7 +15,7 @@ body{
 }
 .title{
   font-family: 'Road Rage', cursive;
-  font-size: xx-large;
+  font-size: 50px;
 }
 .container {
    
@@ -151,16 +151,7 @@ body{
     margin: auto;
     justify-content: center;
 }
-
-input[type="text"]{
-    width: 100%;
-    height: 48px;
-    border-radius: 7px;
-    border: 2px solid #07373F;
-    background-color: #052228;
-    color: white;
-}
-input[type="number"]{
+input[type="number"], input[type="email"], input[type="text"]{
     width: 100%;
     height: 48px;
     border-radius: 7px;
@@ -342,8 +333,24 @@ ul{
         margin: 20px auto; /* Reduce margin for smaller screens */
         padding: 15px; /* Add padding for better spacing */
     }
-
-    .one, .two, .types, .upload, .free, .VIP, .VVIP, .square, .upload-box {
+    .container2, .container{
+      border: none;
+    }
+    .two{
+      height: 969px;
+      width: 100%; /* Make elements full width */
+       /* Allow height to adjust */
+        margin: 10px 0; /* Adjust margin for smaller screens */
+        padding: 15px;
+    }
+    .one{
+      width: 100%; /* Make elements full width */
+         /* Allow height to adjust */
+        margin: 10px 0; /* Adjust margin for smaller screens */
+        padding: 15px; /* Add padding for better spacing */
+        height: 1169px;
+    }
+     .types, .upload, .free, .VIP, .VVIP, .square, .upload-box {
         width: 100%; /* Make elements full width */
         height: auto; /* Allow height to adjust */
         margin: 10px 0; /* Adjust margin for smaller screens */
@@ -400,7 +407,7 @@ ul{
         padding: 10px; /* Add padding for better spacing */
     }
 
-    input[type="text"], input[type="number"], #description {
+    input[type="text"], input[type="number"], input[type="email"] #description {
         width: 100%; /* Make input fields full width */
         padding: 10px; /* Add padding for better spacing */
     }
@@ -446,13 +453,15 @@ ul{
     .text, .pfp {
         padding: 15px; /* Add padding for better spacing */
     }
+
+    
 }
 
 .box {
   position: relative;
   margin: auto;
   width: 400px;
-  height: 650px;
+  height: 630px;
   background: #12464E;
   border: 1px solid #24A0B5;
   border-bottom: 2px dashed #24A0B5;
@@ -553,3 +562,4 @@ border-radius: 15px;
   height: 50px; 
   background-color: white;
 }
+
